pages/styles/index.css
.landing_Page_Intro{
    height: 90vh;
    display: flex;
    align-items: center;
    justify-content: center;
    
    
  }
  
  .landing_Page_Intro p{
    
    width: 50%;
    margin: 0;
    text-align: center;
    
    font-size: 24px;
  
  }
  
  .projects_Header{
    height: 120px;
    width: 100%;
    background: #ECEFF1;
    display: flex;
    align-items: center;
    justify-content: left;
  
  }
  
  .projects_Header h1, .landing_Page_Projects{
    padding: 30px;
  }
  
  
  .landing_Page_Projects{
    min-height: 1200px;
    background: #ECEFF1;
    display: grid;
    grid-template-columns: 2fr 1fr; 
    grid-template-rows: 1fr 1fr 1fr;
    grid-column-gap: 40px;
    grid-row-gap: 5px;
    
  }
  
   .landing_Page_Projects > div {
    width: auto;
    max-height: 400px;
    
  }
  
  .landing_Page_Projects img{
    width: 100%;
    max-width: 600px;
    height: 400px;
    box-shadow: 5px 5px 5px lightgrey;
  }
  
  .projectImg{
    display: flex;
    align-items: center;
    justify-content: left;
    
  }
  
  .tile{
    height: auto;
    width: auto;
    display: flex;
    align-content: center;
    justify-content: center;
  }
  
  .projects_Footer{
    height: 150px;
    width: 100%;
    background: #ECEFF1;
  }
  .projects_Footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    
    margin: 0;
  }
  .projects_Footer  div{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    
    margin: 0;
  }



  @media (max-width: 750px){
    .landing_Page_Projects{
     
      grid-template-columns: 1fr;
      grid-template-rows: 1fr;
      grid-row-gap: 0;

    }
    
    .landing_Page_Projects > div {
      /*max-width: 600px;*/
      max-height: 400px;
      display: flex;
      justify-content: center;
      
    }

    .tile{
      margin-bottom: 1rem;
      min-height: 200px;
    }

    .landing_Page_Projects img{
      box-shadow: 0;
    }
  }

